2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	Merged from trunk:

	* app/core/gimpgradient.c (gimp_gradient_segment_range_delete):
	Don't dereference final_start_seg and final_end_seg if NULL.

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	Merged from trunk:

	* tools/pdbgen/pdb/gradient.pdb
	(gimp_gradient_segment_range_blend_(colors|opacity)): Don't crash 
	if the index of the last segment is out of range.

	* app/pdb/gradient-cmds.c: regenerated.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/Makefile.am: merged changes from trunk (bug #548940).

2008-08-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.8 (interface age 8).

2008-08-21  Sven Neumann  <sven@gimp.org>

	* Made 2.4.7 release.

2008-08-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

        * configure.in: use AM_PROG_CC_C_O to fix warning with automake 1.10.
        Removed obsolete call to AM_PROG_CC_STDC.

2008-08-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/winicon/icosave.c: applied patch from Aurimas Juška
	that fixes an endianness issue (bug #529629).

2008-08-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/gui/gimpdbusservice.[ch]: keep a queue of D-Bus requests and
	work on them one after another instead of handling them all in
	parallel. Complements the fix for bug #546426.

2008-08-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/widgets/gimpdbusservice.c: open the files from an idle
	handler.  Opening a file may take a while (in particular if it
	involves asking the user for input) and we need to respond to the
	D-Bus call before it times out.

2008-07-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/text/gimptext-compat.c (text_get_extents): applied the same
	workaround for a memory leak in PangoFT2 (bug #143542) as was
	applied long ago in gimptextlayout.c.

2008-07-10  Manish Singh  <yosh@gimp.org>

	Merged from trunk:
