@@ -1,3 +1,11 @@
+2008-09-01  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* app/core/gimpprojection-construct.c (gimp_projection_initialize):
+	also need to initialize the projection if the layer mask could
+	introduce transparency. Fixes bug #550024.
+
 2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>
 
 	Merged from trunk:
